p2/manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app1
        app1:
          serviceName: app1
          servicePort: 80
      - path: /app2
        app2:
          serviceName: app2
          servicePort: 80
      - path: /app3
        app3:
          serviceName: app3
          servicePort: 80
